src/main/metadata/objects/SystemSettingsDFW__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Logging framework</description>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Purge__c</fullName>
        <label>Log Purge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>SystemSettingsDFW</label>
</CustomObject>